Task-3 - Kubernetes MultiContainer Pod yaml/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: mypod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
